Fixed out minor bugs

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "/home",
         "/home/desktop",
         "/lib",
+        "/services"
         "/usr",
         "/usr/wallpapers"
     ],
