--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "/bin/touch.lua",
         "/lib/buttons.lua",
         "/startup.lua",
-        "/version.txt"
+        "/version.txt",
+        "/package.json"
     ]
 }
