--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "/bin/touch.lua",
         "/lib/buttons.lua",
         "/startup.lua",
-        "/version.txt",
-        "/package.json"
+        "/version.txt"
     ]
 }
