Fixed bug where installer would not work because of a missing comma in the JSON

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "/home",
         "/home/desktop",
         "/lib",
-        "/services"
+        "/services",
         "/usr",
         "/usr/wallpapers"
     ],
